# PurrfectEngine

./: .gitignore  .gitmodules  CMakeLists.txt  Debug.cap  LICENSE  README.md  nob.c
.github/workflows/: ci.yml
assets/models/: coin.mtl
assets/shaders/: light.glsl  scene.frag  scene.vert  shader.frag  shader.vert  vertex3D.glsl
assets/text/: love.md
core/: CMakeLists.txt
core/include/PurrfectEngine/: PUID.hpp  PurrfectEngine.hpp  app.hpp  assets.hpp  audio.hpp  camera.hpp  entry.hpp  events.hpp  extensions.hpp  input.hpp  object.hpp  renderer.hpp  renderer3D.hpp  scene.hpp  system.hpp  transform.hpp  utils.hpp
core/include/PurrfectEngine/entityManager/: entity.hpp
core/include/PurrfectEngine/renderer/: cubemap.hpp  material.hpp  mesh.hpp  pipeline.hpp  renderComponent.hpp  renderTarget.hpp  skybox.hpp  texture.hpp
core/src/: PUID.cpp  PurrfectEngine.cpp  app.cpp  assets.cpp  audio.cpp  camera.cpp  events.cpp  input.cpp  object.cpp  renderer.cpp  renderer3D.cpp  scene.cpp  transform.cpp  utils.cpp
core/src/renderer/: cubemap.cpp  mesh.cpp  pipeline.cpp  renderComponent.cpp  renderTarget.cpp  skybox.cpp  texture.cpp
dependencies/: deps.h
shaders/: c.c  frag.spv  main.vert  shader.frag  shader.vert  vert.spv
test/: CMakeLists.txt
test/shaders/: frag.spv  shader.frag  shader.vert  vert.spv
test/shaders/PBR/: integrateBRDF.frag  integrateBRDF.vert  integrateBRDF_f.spv  integrateBRDF_v.spv  irradiance.frag  irradiance_f.spv  pbr.frag  pbr.spv  preFilter.frag  preFilter_f.spv  rectToCubemap.frag  rectToCubemap.vert  rectToCubemap_f.spv  rectToCubemap_v.spv  skybox.frag  skybox.vert  skybox_f.spv  skybox_v.spv
test/src/: main.cpp
